--- a/index.html
+++ b/index.html
@@ -15,29 +15,15 @@
       min-height: 100vh;
       margin: 0;
       padding: 0;
+      background-color: #f2f2f2; /* رمادي فاتح مائل للابيض */
     }
 
     body {
       display: flex;
       flex-direction: column;
       font-family: 'Cairo', sans-serif;
-      background: #FFFAFA;
       direction: rtl;
       color: #000;
-    }
-
-    /* خلفية شفافة */
-    .background-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('SA.jpg') no-repeat center center fixed;
-      background-size: cover;
-      opacity: 0.1;
-      z-index: -1;
-      pointer-events: none;
     }
 
     .main-content {
@@ -204,7 +190,6 @@
   </style>
 </head>
 <body>
-  <div class="background-overlay"></div>
 
   <!-- الشريط العلوي -->
   <div class="navbar">
