--- a/index.html
+++ b/index.html
@@ -286,6 +286,48 @@
       </div>
     </div>
 
+    <!-- قسم تسويقي بثلاث جمل بطريقة تصميم الصورة -->
+<link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic&display=swap" rel="stylesheet">
+
+<div class="container my-5 py-4 px-3 rounded" style="background-color: #e0f4ff;">
+  <div style="font-family: 'Noto Kufi Arabic', sans-serif; color: #003344; text-align: right;">
+
+    <!-- الجملة 1 -->
+    <div class="row align-items-center mb-4">
+      <div class="col-10">
+        <h5><strong>استكشف العالم من مكانك</strong></h5>
+        <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
+      </div>
+      <div class="col-2 text-end">
+        <img src="icon1.png" alt="icon1" width="48" height="48">
+      </div>
+    </div>
+
+    <!-- الجملة 2 -->
+    <div class="row align-items-center mb-4">
+      <div class="col-10">
+        <h5><strong>كل ما تحتاجه قبل السفر في مكان واحد</strong></h5>
+        <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
+      </div>
+      <div class="col-2 text-end">
+        <img src="icon2.png" alt="icon2" width="48" height="48">
+      </div>
+    </div>
+
+    <!-- الجملة 3 -->
+    <div class="row align-items-center">
+      <div class="col-10">
+        <h5><strong>سافر بعقلك أولاً… ثم قرر!</strong></h5>
+        <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
+      </div>
+      <div class="col-2 text-end">
+        <img src="icon3.png" alt="icon3" width="48" height="48">
+      </div>
+    </div>
+
+  </div>
+</div>
+    
     <!-- الوجهات -->
     <div class="container destinations">
       <div class="row g-3">
