--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     body {
       display: flex;
       flex-direction: column;
-      font-family: 'Cairo', sans-serif;
+      font-family: 'Noto Kufi Arabic', 'Cairo', sans-serif;
       direction: rtl;
       color: #000;
     }
