--- a/index.html
+++ b/index.html
@@ -286,46 +286,44 @@
       </div>
     </div>
 
-    <!-- قسم تسويقي بثلاث جمل بطريقة تصميم الصورة -->
+    <!-- قسم تسويقي مرتب مثل الصورة بخلفية رملية -->
 <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic&display=swap" rel="stylesheet">
 
-<div class="container my-5 py-4 px-3 rounded" style="background-color: #e0f4ff;">
-  <div style="font-family: 'Noto Kufi Arabic', sans-serif; color: #003344; text-align: right;">
-
-    <!-- الجملة 1 -->
-    <div class="row align-items-center mb-4">
-      <div class="col-10">
-        <h5><strong>استكشف العالم من مكانك</strong></h5>
-        <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
-      </div>
-      <div class="col-2 text-end">
-        <img src="icon1.png" alt="icon1" width="48" height="48">
-      </div>
+<div class="container my-5 py-4 px-4 rounded" style="background-color: #fdf5e6; font-family: 'Noto Kufi Arabic', sans-serif; color: #003344;">
+  
+  <!-- الجملة 1 -->
+  <div class="row align-items-center mb-4">
+    <div class="col-2 text-start pe-3">
+      <img src="icon1.png" alt="icon1" width="40" height="40">
     </div>
-
-    <!-- الجملة 2 -->
-    <div class="row align-items-center mb-4">
-      <div class="col-10">
-        <h5><strong>كل ما تحتاجه قبل السفر في مكان واحد</strong></h5>
-        <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
-      </div>
-      <div class="col-2 text-end">
-        <img src="icon2.png" alt="icon2" width="48" height="48">
-      </div>
+    <div class="col-10">
+      <h6 class="mb-1 fw-bold">استكشف العالم من مكانك</h6>
+      <p class="mb-0" style="font-size: 14px;">اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
     </div>
-
-    <!-- الجملة 3 -->
-    <div class="row align-items-center">
-      <div class="col-10">
-        <h5><strong>سافر بعقلك أولاً… ثم قرر!</strong></h5>
-        <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
-      </div>
-      <div class="col-2 text-end">
-        <img src="icon3.png" alt="icon3" width="48" height="48">
-      </div>
-    </div>
-
   </div>
+
+  <!-- الجملة 2 -->
+  <div class="row align-items-center mb-4">
+    <div class="col-2 text-start pe-3">
+      <img src="icon2.png" alt="icon2" width="40" height="40">
+    </div>
+    <div class="col-10">
+      <h6 class="mb-1 fw-bold">كل ما تحتاجه قبل السفر في مكان واحد</h6>
+      <p class="mb-0" style="font-size: 14px;">دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
+    </div>
+  </div>
+
+  <!-- الجملة 3 -->
+  <div class="row align-items-center">
+    <div class="col-2 text-start pe-3">
+      <img src="icon3.png" alt="icon3" width="40" height="40">
+    </div>
+    <div class="col-10">
+      <h6 class="mb-1 fw-bold">سافر بعقلك أولاً… ثم قرر!</h6>
+      <p class="mb-0" style="font-size: 14px;">شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
+    </div>
+  </div>
+
 </div>
     
     <!-- الوجهات -->
