--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <img src="icon2.png" alt="icon2" width="40" height="40">
     </div>
     <div class="col-10">
-      <h6 class="mb-1 fw-bold">كل ما تحتاجه قبل السفر في مكان واحد</h6>
+      <h6 class="mb-1 fw-bold">كل ما تحتاجه قبل السفر</h6>
       <p class="mb-0" style="font-size: 14px;">دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
     </div>
   </div>
